Tests/Core/AWSClientRuntimeTests/Protocols/RestXML/Models/Errors/InvalidGreeting.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//

// Code generated by smithy-swift-codegen. DO NOT EDIT!

import AWSClientRuntime
import ClientRuntime

public struct InvalidGreeting: AWSServiceError, HTTPError, Error {
    public var typeName: String?
    public var httpResponse = HttpResponse()
    public var requestID: String?
    public var message: String?

    public init (
        message: String? = nil
    )
    {
        self.message = message
    }
}
